language/move-lang/tests/move_check/parser/friend_decl_more_than_one_module.move
address 0x42 {
module A {}
module B {}

module M {
    use 0x42::A;
    friend A 0x42::B;
}
}
